--- a/index.Rmd
+++ b/index.Rmd
@@ -239,4 +239,51 @@ key_templates <-
   theme_classic()
 ```
 
+### Tempograms
+
+#### energy_novelty jimi hendrix
+
+```{r}
+"features/jasper-v-2.json" |>
+  compmus_energy_novelty() |> 
+  ggplot(aes(t, novelty)) +
+  geom_line() +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "Energy Novelty")
+```
+
+#### spectral_novelty jimi hendrix
+
+```{r}
+"features/jasper-v-2.json" |>
+  compmus_spectral_novelty() |> 
+  ggplot(aes(t, novelty)) +
+  geom_line() +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "Spectral Novelty")
+```
+
+#### tempogram jimi hendrix cyclic = FALSE
+
+```{r}
+"features/jasper-v-2.json" |>
+  compmus_tempogram(window_size = 8, hop_size = 1, cyclic = FALSE) |>
+  ggplot(aes(x = time, y = bpm, fill = power)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Tempo (BPM)") +
+  theme_classic()
+```
+
+#### tempogram Jimi Hendrix cyclic = TRUE
+
+```{r}
+"features/jasper-v-2.json" |>
+  compmus_tempogram(window_size = 8, hop_size = 1, cyclic = TRUE) |>
+  ggplot(aes(x = time, y = bpm, fill = power)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Tempo (BPM)") +
+  theme_classic()
+```
 
