--- a/index.Rmd
+++ b/index.Rmd
@@ -1,467 +1,439 @@
 ---
-title: "Compmus Portofolio"
+title: "Comparative Track Analysis: AI Jazz & Jimi Hendrix"
 author: "Jasper Valk"
+date: "`r Sys.Date()`"
 output: 
   flexdashboard::flex_dashboard:
     storyboard: true
+    theme:
+      version: 4
+      bg: "#fefae0"
+      fg: "#0c1618"
+      primary: "#243e36"
+      navbar-bg: "#7ca982"
+      base_font: 
+        google: Prompt
+      heading_font:
+        google: Sen
+      code_font:
+        google: 
+          family: JetBrains Mono
+          local: false
+    vertical_layout: fill
 ---
 
-```{r}
-library(tidyverse)
+```{r setup, include=FALSE}
 library(flexdashboard)
+library(tidyverse)
 library(plotly)
+library(gt)
+library(corrplot)
+library(heatmaply)
 library(tidymodels)
 library(ggdendro)
-library(heatmaply)
+library(htmltools)
 source("compmus.R")
-```
-
-### week 12: Clustering
-
-```{r}
-get_conf_mat <- function(fit) {
-  outcome <- .get_tune_outcome_names(fit)
-  fit |> 
-    collect_predictions() |> 
-    conf_mat(truth = outcome, estimate = .pred_class)
-}  
-
-get_pr <- function(fit) {
-  fit |> 
-    conf_mat_resampled() |> 
-    group_by(Prediction) |> mutate(precision = Freq / sum(Freq)) |> 
-    group_by(Truth) |> mutate(recall = Freq / sum(Freq)) |> 
-    ungroup() |> filter(Prediction == Truth) |> 
-    select(class = Prediction, precision, recall)
-}  
-
 compmus2025 <- read_csv("compmus2025.csv")
-```
-#### ggdendogram with average clustering
 
-```{r}
-cluster_juice <-
-  recipe(
-    filename ~
-      arousal +
-      danceability +
-      instrumentalness +
-      tempo +
-      valence,
-    data = compmus2025
-  ) |>
-  step_center(all_predictors()) |>
-  step_scale(all_predictors()) |> 
-  # step_range(all_predictors()) |> 
-  prep(compmus2025) |>
-  juice() |>
-  column_to_rownames("filename")
+# Define templates
+major_chord <- c(1,0,0,0,1,0,0,1,0,0,0,0)
+minor_chord <- c(1,0,0,1,0,0,0,1,0,0,0,0)
+seventh_chord <- c(1,0,0,0,1,0,0,1,0,0,1,0)
 
-compmus_dist <- dist(cluster_juice, method = "euclidean")
+major_key <- c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
+minor_key <- c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
 
-compmus_dist |> 
-  hclust(method = "complete") |> # Try single, average, and complete.
-  dendro_data() |>
-  ggdendrogram()
-```
+circshift <- function(x, n) {
+  if (n == 0) return(x)
+  c(tail(x, -n), head(x, n))
+}
 
-#### heatmap with average clustering method
-
-```{r}
-heatmaply(
-  cluster_juice,
-  hclustfun = hclust,
-  hclust_method = "average",  # Change for single, average, or complete linkage.
-  dist_method = "euclidean"
+chord_templates <- tribble(
+  ~name, ~template,
+  "C:maj", circshift(major_chord, 0),
+  "C#:maj", circshift(major_chord, 1),
+  "D:maj", circshift(major_chord, 2),
+  "D#:maj", circshift(major_chord, 3),
+  "E:maj", circshift(major_chord, 4),
+  "F:maj", circshift(major_chord, 5),
+  "F#:maj", circshift(major_chord, 6),
+  "G:maj", circshift(major_chord, 7),
+  "G#:maj", circshift(major_chord, 8),
+  "A:maj", circshift(major_chord, 9),
+  "A#:maj", circshift(major_chord, 10),
+  "B:maj", circshift(major_chord, 11)
 )
-```
-### week 12: classification
 
-```{r}
-compmus2025_filtered <- 
-  compmus2025 |> filter(!is.na(ai)) |> 
-  mutate(ai = factor(if_else(ai, "AI", "Non-AI")))
+key_templates <- tribble(
+  ~name, ~template,
+  "C:maj", circshift(major_key, 0),
+  "C#:maj", circshift(major_key, 1),
+  "D:maj", circshift(major_key, 2),
+  "D#:maj", circshift(major_key, 3),
+  "E:maj", circshift(major_key, 4),
+  "F:maj", circshift(major_key, 5),
+  "F#:maj", circshift(major_key, 6),
+  "G:maj", circshift(major_key, 7),
+  "G#:maj", circshift(major_key, 8),
+  "A:maj", circshift(major_key, 9),
+  "A#:maj", circshift(major_key, 10),
+  "B:maj", circshift(major_key, 11)
+)
 
-classification_recipe <-
-  recipe(
-    ai ~
-      arousal +
-      danceability +
-      instrumentalness +
-      tempo +
-      valence,
-    data = compmus2025_filtered
-  ) |>
-  step_center(all_predictors()) |>
-  step_scale(all_predictors())      # Converts to z-scores.
-  # step_range(all_predictors())    # Sets range to [0, 1].
-
-compmus_cv <- compmus2025_filtered |> vfold_cv(10) # more cross!!
 ```
 
+Introduction {.storyboard}
+====================================================
 
-#### Mosaic classifier
-```{r}
-knn_model <-
-  nearest_neighbor(neighbors = 1) |>
-  set_mode("classification") |> 
-  set_engine("kknn")
-classification_knn <- 
-  workflow() |> 
-  add_recipe(classification_recipe) |> 
-  add_model(knn_model) |> 
-  fit_resamples(compmus_cv, control = control_resamples(save_pred = TRUE))
+### Overview
 
-classification_knn |> get_conf_mat()
-```
-```{r}
-classification_knn |> get_conf_mat() |> autoplot(type = "mosaic")
-```
+This dashboard presents a musicological comparison between two unique tracks:
+- **Track 1**: An AI-generated jazz piece
+- **Track 2**: *Hey Joe* by Jimi Hendrix (a live-recorded, human-composed classic)
 
-#### heatmap classifier
+By analyzing multiple musical attributes like chroma, timbre, rhythm, tonality, and clustering, we are uncovering contrasts in structure and musical expression between synthetic and human creativity.
 
-```{r}
-classification_knn |> get_conf_mat() |> autoplot(type = "heatmap")
-```
-#### precision and recall
+```{r, echo=FALSE}
+tags$div(
+  tags$h4("Track 1: AI-Generated Jazz"),
+  tags$p("This song was created with the use of a AI tool named 'Suno' on suno.com. The song is created with the prompt 'create a jazz song about the impact of AI on the music industry that is about 2 minutes long'. The song is about what is named in the prompt. I chose jazz because it is largely improvisational, relying on spontaneity and creativity in the moment. This makes it especially interesting for an AI to generate. I wanted to challenge the system to replicate the fluidity and expressive nuance that is in jazz music."),
+  tags$h4("Track 2: 'Hey Joe' by Jimi Hendrix"),
+  tags$p("The second song is 'Hey Joe' from Jimi Hendrix. It is downloaded from the site; https://emp3juice.la/. I Chose this song because I'm a big fan of Jimi Hendrix and in my opinion, the best guitarist that has ever lived. Because I'm such a big fan of his, I really wanted to know more about his music by analyzing it during this course, and that is what I did")
+)
 
-```{r}
-classification_knn |> get_pr()
-```
-
-#### importance of classification
-
-```{r}
-forest_model <-
-  rand_forest() |>
-  set_mode("classification") |> 
-  set_engine("ranger", importance = "impurity")
-indie_forest <- 
-  workflow() |> 
-  add_recipe(classification_recipe) |> 
-  add_model(forest_model) |> 
-  fit_resamples(
-    compmus_cv, 
-    control = control_resamples(save_pred = TRUE)
-  )
-
-indie_forest |> get_pr()
-```
-
-```{r}
-workflow() |> 
-  add_recipe(classification_recipe) |> 
-  add_model(forest_model) |> 
-  fit(compmus2025_filtered) |> 
-  pluck("fit", "fit", "fit") |>
-  ranger::importance() |> 
-  enframe() |> 
-  mutate(name = fct_reorder(name, value)) |> 
-  ggplot(aes(name, value)) + 
-  geom_col() + 
-  coord_flip() +
-  theme_minimal() +
-  labs(x = NULL, y = "Importance")
-```
-
-#### scatterplot
-
-```{r}
-compmus2025_filtered |>
-  ggplot(aes(x = valence, y = arousal, colour = ai, size = tempo)) +
-  geom_point(alpha = 0.8) +
-  scale_color_viridis_d() +
-  labs(
-    x = "Valence",
-    y = "Arousal",
-    size = "Tempo",
-    colour = "AI"
-    
-
-  )
-ggplotly()
 ```
 
 
-### Visualization of the AI song contest
+```{r, results='asis', echo=FALSE}
+cat('
+<h4>Listen: AI Jazz</h4>
+<audio controls>
+  <source src="jasper-v-1.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+')
+```
 
+```{r,  results='asis', echo=FALSE}
+cat('
+<h4>Listen: Hey Joe (Hendrix)</h4>
+<audio controls>
+  <source src="jasper-v-2.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+')
+```
+
+
+Track-Level Summary {.storyboard}
+====================================================
+
+### Feature Correlation Matrix
 ```{r}
-"features/jasper-v-2.json" |>                           # Change the track
-  compmus_chroma(norm = "euclidean") |>                 # Change the norm
-  compmus_self_similarity(
-    feature = pc,
-    distance = "angular"                             # Change the distance
-  ) |>   
-  ggplot(aes(x = xtime, y = ytime, fill = d)) + 
+corrplot(cor(compmus2025[sapply(compmus2025, is.numeric)], use = "pairwise.complete.obs"), method = 'number')
+```
+
+***
+All analyses assume that the JSON files are correctly parsed and that the AI-generated track follows Western tonal systems. Novelty plots assume consistent loudness normalization. These assumptions may affect how results are interpreted, especially with unconventional AI music structures.
+
+### Arousal vs Valence (with Highlighted Tracks)
+```{r}
+my_tracks <- compmus2025 |> filter(filename %in% c("jasper-v-1", "jasper-v-2"))
+compmus2025 |> 
+  ggplot(aes(x = arousal, y = valence)) + 
+  geom_point(alpha = 0.3) + 
+  geom_point(data = my_tracks, color = 'red', size = 3) + 
+  theme_minimal() + 
+  labs(title = "Arousal vs Valence with My Tracks Highlighted")
+```
+
+### Danceability vs Instrumentalness
+```{r}
+ggplot(compmus2025, aes(x = danceability, y = instrumentalness)) + 
+  geom_point(alpha = 0.5) + 
+  theme_minimal() + 
+  labs(title = "Danceability vs Instrumentalness")
+```
+
+AI Jazz (Track 1) {.storyboard}
+====================================================
+
+### Chromagram
+```{r}
+"features/jasper-v-1.json" |> compmus_chroma(norm = "identity") |>
+  ggplot(aes(x = time, y = pc, fill = value)) +
   geom_raster() +
-  scale_fill_viridis_c(guide = "none") +               # Change the colours?
-  labs(x = "Time (s)", y = NULL, fill = NULL) +
+  scale_y_continuous(breaks = 0:11, labels = LETTERS[1:12]) +
+  scale_fill_viridis_c(guide = "none") +
   theme_classic()
 ```
 
-------------------------------------------------------------------------
-
-This is a self-similarity matrix of my second song. For the norm i have chosen euclidean with a angular distance. I've chosen these variables because of the you can clearly see al the patterns in the songs very well. The rythem of the song is clearly visable. For the song i have chosen my second uploaded song; "Hey Joe" from Jimi Hendrix.
-
-### other viz
-
-```{r}
-"features/jasper-v-1.json" |>                           # Change the track
-  compmus_mfccs(norm = "identity") |>                  # Change the norm
-  ggplot(aes(x = time, y = mfcc, fill = value)) + 
-  geom_raster() +
-  scale_y_continuous(
-    breaks = 0:12,
-    minor_breaks = NULL,
-  ) +
-  scale_fill_viridis_c(guide = "none") +               # Change the colours?
-  labs(x = "Time (s)", y = "Coefficient Number", fill = NULL) +
-  theme_classic()   
-```
-
-### another one
-
-```{r}
-"features/jasper-v-2.json" |>                           # Change the track
-  compmus_chroma(norm = "identity") |>                 # Change the norm
-  compmus_self_similarity(
-    feature = pc,
-    distance = "euclidean"                             # Change the distance
-  ) |>   
-  ggplot(aes(x = xtime, y = ytime, fill = d)) + 
-  geom_raster() +
-  scale_fill_viridis_c(guide = "none") +               # Change the colours?
-  labs(x = "Time (s)", y = NULL, fill = NULL) +
-  theme_classic()
-```
-
-### key viz
-
-```{r}
-
-"features/jasper-v-2.json" |>                         # Change the track
-  compmus_chroma(norm = "identity") |>                 # Change the norm
-  ggplot(aes(x = time, y = pc, fill = value)) + 
-  geom_raster() +
-  scale_y_continuous(
-    breaks = 0:11,
-    minor_breaks = NULL,
-    labels = c(
-                "C", "C#|Db", "D", "D#|Eb",
-                "E", "F", "F#|Gb", "G",
-                "G#|Ab", "A", "A#|Bb", "B"
-              )
-  ) +
-  scale_fill_viridis_c(guide = "none") +               # Change the colours?
-  labs(x = "Time (s)", y = NULL, fill = NULL) +
-  theme_classic()                                      # Change the theme?
-```
-
-### Week 10
-
-#### keygram of "Hey joe" - Jimi Hendrix
-
-```{r}
-#      C     C#    D     Eb    E     F     F#    G     Ab    A     Bb    B
-major_chord <-
-  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    0,    0)
-minor_chord <-
-  c(   1,    0,    0,    1,    0,    0,    0,    1,    0,    0,    0,    0)
-seventh_chord <-
-  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    1,    0)
-
-major_key <-
-  c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
-minor_key <-
-  c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
-
-chord_templates <-
-  tribble(
-    ~name, ~template,
-    "Gb:7", circshift(seventh_chord, 6),
-    "Gb:maj", circshift(major_chord, 6),
-    "Bb:min", circshift(minor_chord, 10),
-    "Db:maj", circshift(major_chord, 1),
-    "F:min", circshift(minor_chord, 5),
-    "Ab:7", circshift(seventh_chord, 8),
-    "Ab:maj", circshift(major_chord, 8),
-    "C:min", circshift(minor_chord, 0),
-    "Eb:7", circshift(seventh_chord, 3),
-    "Eb:maj", circshift(major_chord, 3),
-    "G:min", circshift(minor_chord, 7),
-    "Bb:7", circshift(seventh_chord, 10),
-    "Bb:maj", circshift(major_chord, 10),
-    "D:min", circshift(minor_chord, 2),
-    "F:7", circshift(seventh_chord, 5),
-    "F:maj", circshift(major_chord, 5),
-    "A:min", circshift(minor_chord, 9),
-    "C:7", circshift(seventh_chord, 0),
-    "C:maj", circshift(major_chord, 0),
-    "E:min", circshift(minor_chord, 4),
-    "G:7", circshift(seventh_chord, 7),
-    "G:maj", circshift(major_chord, 7),
-    "B:min", circshift(minor_chord, 11),
-    "D:7", circshift(seventh_chord, 2),
-    "D:maj", circshift(major_chord, 2),
-    "F#:min", circshift(minor_chord, 6),
-    "A:7", circshift(seventh_chord, 9),
-    "A:maj", circshift(major_chord, 9),
-    "C#:min", circshift(minor_chord, 1),
-    "E:7", circshift(seventh_chord, 4),
-    "E:maj", circshift(major_chord, 4),
-    "G#:min", circshift(minor_chord, 8),
-    "B:7", circshift(seventh_chord, 11),
-    "B:maj", circshift(major_chord, 11),
-    "D#:min", circshift(minor_chord, 3)
-  )
-
-key_templates <-
-  tribble(
-    ~name, ~template,
-    "Gb:maj", circshift(major_key, 6),
-    "Bb:min", circshift(minor_key, 10),
-    "Db:maj", circshift(major_key, 1),
-    "F:min", circshift(minor_key, 5),
-    "Ab:maj", circshift(major_key, 8),
-    "C:min", circshift(minor_key, 0),
-    "Eb:maj", circshift(major_key, 3),
-    "G:min", circshift(minor_key, 7),
-    "Bb:maj", circshift(major_key, 10),
-    "D:min", circshift(minor_key, 2),
-    "F:maj", circshift(major_key, 5),
-    "A:min", circshift(minor_key, 9),
-    "C:maj", circshift(major_key, 0),
-    "E:min", circshift(minor_key, 4),
-    "G:maj", circshift(major_key, 7),
-    "B:min", circshift(minor_key, 11),
-    "D:maj", circshift(major_key, 2),
-    "F#:min", circshift(minor_key, 6),
-    "A:maj", circshift(major_key, 9),
-    "C#:min", circshift(minor_key, 1),
-    "E:maj", circshift(major_key, 4),
-    "G#:min", circshift(minor_key, 8),
-    "B:maj", circshift(major_key, 11),
-    "D#:min", circshift(minor_key, 3)
-  )
-
-"features/jasper-v-2.json" |> 
-  compmus_chroma(norm = "identity") |> 
-  compmus_match_pitch_templates(
-    key_templates,         # Change to chord_templates if desired
-    norm = "identity",       # Try different norms (and match it with what you used in `compmus_chroma`)
-    distance = "cosine"   # Try different distance metrics
-  ) |>
-  ggplot(aes(x = time, y = name, fill = d)) + 
-  geom_raster() +
-  scale_fill_viridis_c(guide = guide_legend(title = 'Distance')) +               # Change the colours?
-  labs(x = "Time (s)", y = "Keygram 'Hey joe'", fill = NULL) +
-  theme_classic()                                      # Change the theme?
-```
-
-#### Keygram of AI-genarated jazz song
-
+### Chordogram – AI Jazz
 ```{r}
 "features/jasper-v-1.json" |> 
   compmus_chroma(norm = "identity") |> 
-  compmus_match_pitch_templates(
-    key_templates,         # Change to chord_templates if desired
-    norm = "identity",       # Try different norms (and match it with what you used in `compmus_chroma`)
-    distance = "cosine"   # Try different distance metrics
-  ) |>
-  ggplot(aes(x = time, y = name, fill = d)) + 
+  compmus_match_pitch_templates(chord_templates, norm = "identity", distance = "cosine") |> 
+  ggplot(aes(x = time, y = name, fill = d)) +
   geom_raster() +
-  scale_fill_viridis_c(guide = guide_legend(title = 'Distance')) +               # Change the colours?
-  labs(x = "Time (s)", y = "Keygram 'AI jazz'", fill = NULL) +
-  theme_classic() 
-```
-
-#### Chordogram of "Hey Joe" - jimi Hendrix
-
-```{r}
-"features/jasper-v-2.json" |> 
-  compmus_chroma(norm = "identity") |> 
-  compmus_match_pitch_templates(
-    chord_templates,         # Change to chord_templates if desired
-    norm = "manhattan",       # Try different norms (and match it with what you used in `compmus_chroma`)
-    distance = "manhattan"   # Try different distance metrics
-  ) |>
-  ggplot(aes(x = time, y = name, fill = d)) + 
-  geom_raster() +
-  scale_fill_viridis_c(guide = guide_legend(title = 'Distance')) +               # Change the colours?
-  labs(x = "Time (s)", y = "Keygram 'Hey joe'", fill = NULL) +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Chord", title = "Chordogram – AI Jazz") +
   theme_classic()
+
 ```
 
-#### Chordogram of AI-generated Jazz song
 
+### Spectral Novelty
 ```{r}
-"features/jasper-v-1.json" |> 
-  compmus_chroma(norm = "identity") |> 
-  compmus_match_pitch_templates(
-    chord_templates,         # Change to chord_templates if desired
-    norm = "identity",       # Try different norms (and match it with what you used in `compmus_chroma`)
-    distance = "cosine"   # Try different distance metrics
-  ) |>
-  ggplot(aes(x = time, y = name, fill = d)) + 
-  geom_raster() +
-  scale_fill_viridis_c(guide = guide_legend(title = 'Distance')) +               # Change the colours?
-  labs(x = "Time (s)", y = "Keygram 'Hey joe'", fill = NULL) +
-  theme_classic()
-```
-
-### Week 11, novelty
-
-#### energy_novelty jimi hendrix
-
-```{r}
-"features/jasper-v-2.json" |>
-  compmus_energy_novelty() |> 
+"features/jasper-v-1.json" |> compmus_spectral_novelty() |> 
   ggplot(aes(t, novelty)) +
-  geom_line() +
-  theme_minimal() +
-  labs(x = "Time (s)", y = "Energy Novelty")
-```
-
-#### spectral_novelty jimi hendrix
-
-```{r}
-"features/jasper-v-2.json" |>
-  compmus_spectral_novelty() |> 
-  ggplot(aes(t, novelty)) +
-  geom_line() +
+  geom_line(color = "#FFDE59") +
   theme_minimal() +
   labs(x = "Time (s)", y = "Spectral Novelty")
 ```
 
-### week 11, tempograms
-
-#### tempogram jimi hendrix cyclic = FALSE
-
+### Chroma Self-Similarity
 ```{r}
-"features/jasper-v-2.json" |>
-  compmus_tempogram(window_size = 8, hop_size = 1, cyclic = FALSE) |>
+"features/jasper-v-1.json" |> 
+  compmus_chroma(norm = "identity") |> 
+  compmus_self_similarity(feature = pc, distance = "cosine") |> 
+  ggplot(aes(x = xtime, y = ytime, fill = d)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = NULL, title = "Chroma-Based Self-Similarity – AI Jazz") +
+  theme_classic()
+
+```
+
+
+### Tempogram
+```{r}
+"features/jasper-v-1.json" |> 
+  compmus_tempogram(window_size = 32, hop_size = 5, cyclic = TRUE) |> 
   ggplot(aes(x = time, y = bpm, fill = power)) +
   geom_raster() +
   scale_fill_viridis_c(guide = "none") +
-  labs(x = "Time (s)", y = "Tempo (BPM)") +
+  labs(x = "Time (s)", y = "Tempo (BPM)", title = "Tempogram – AI Jazz (Reduced Resolution)") +
   theme_classic()
+
+```
+
+### Timbre Self-Similarity
+```{r}
+"features/jasper-v-1.json" |> 
+  compmus_mfccs(norm = "identity") |> 
+  compmus_self_similarity(feature = mfcc, distance = "euclidean") |> 
+  ggplot(aes(x = xtime, y = ytime, fill = d)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = NULL) +
+  theme_classic()
+```
+
+Hey Joe – Hendrix (Track 2) {.storyboard}
+====================================================
+### Chromagram
+```{r}
+"features/jasper-v-2.json" |> compmus_chroma(norm = "identity") |>
+  ggplot(aes(x = time, y = pc, fill = value)) +
+  geom_raster() +
+  scale_y_continuous(breaks = 0:11, labels = LETTERS[1:12]) +
+  scale_fill_viridis_c(guide = "none") +
+  theme_classic()
+```
+
+### Cepstrogram – Hendrix
+
+```{r}
+"features/jasper-v-2.json" |> 
+  compmus_mfccs(norm = "identity") |> 
+  ggplot(aes(x = time, y = mfcc, fill = value)) + 
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "MFCC Coefficient", title = "Cepstrogram – Hendrix") +
+  theme_classic()
+```
+
+
+### Energy Novelty
+```{r}
+"features/jasper-v-2.json" |> compmus_energy_novelty() |> 
+  ggplot(aes(t, novelty)) +
+  geom_line(color = "#79F9B7") +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "Energy Novelty")
+```
+
+### Keygram
+```{r}
+"features/jasper-v-2.json" |> 
+  compmus_chroma(norm = "euclidean") |> 
+  compmus_match_pitch_templates(key_templates, norm = "euclidean", distance = "angular") |> 
+  ggplot(aes(x = time, y = name, fill = d)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Key") +
+  theme_classic()
+```
+
+### Chordogram – Hendrix
+```{r}
+
+"features/jasper-v-2.json" |> 
+  compmus_chroma(norm = "identity") |> 
+  compmus_match_pitch_templates(chord_templates, norm = "identity", distance = "cosine") |> 
+  ggplot(aes(x = time, y = name, fill = d)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Chord", title = "Chordogram – Hendrix") +
+  theme_classic()
+
+```
+
+### Chroma Self-Similarity
+```{r}
+"features/jasper-v-2.json" |> 
+  compmus_chroma(norm = "identity") |> 
+  compmus_self_similarity(feature = pc, distance = "cosine") |> 
+  ggplot(aes(x = xtime, y = ytime, fill = d)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = NULL) +
+  theme_classic()
+```
+
+### Tempogram – Hendrix
+```{r}
+"features/jasper-v-2.json" |> 
+  compmus_tempogram(window_size = 32, hop_size = 5, cyclic = TRUE) |> 
+  ggplot(aes(x = time, y = bpm, fill = power)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Tempo (BPM)", title = "Tempogram – Hendrix") +
+  theme_classic()
+```
+
+Comparative Clustering {.storyboard}
+====================================================
+
+### Dendrogram (Complete Linkage)
+```{r}
+cluster_juice <- recipe(filename ~ arousal + danceability + instrumentalness + tempo + valence, data = compmus2025) |>
+  step_center(all_predictors()) |>
+  step_scale(all_predictors()) |>
+  prep(compmus2025) |> juice() |> column_to_rownames("filename")
+
+compmus_dist <- dist(cluster_juice, method = "euclidean")
+compmus_dist |> hclust(method = "complete") |> dendro_data() |> ggdendrogram()
+```
+
+### Heatmap of Feature Profiles
+```{r}
+heatmaply(
+  cluster_juice,
+  hclustfun = hclust,
+  hclust_method = "complete",
+  dist_method = "euclidean"
+)
+```
+
+Conclusion {.storyboard}
+====================================================
+
+### Final Thoughts
+- **AI Jazz** displays smoother energy flow and tonal center variety. Its novelty and tempo are more uniform.
+- **Hendrix** features dramatic energy shifts and harmonic richness. Self-similarity matrices show strong structural recurrence.
+- Clustering confirms they belong to distinct musical regions in the corpus.
+
+The contrast between the AI-generated jazz track and Hey Joe by Jimi Hendrix paints a clear picture of two very different musical approaches—one shaped by algorithmic predictability and the other by human expressiveness. The AI Jazz track displays a smooth, continuous flow with relatively uniform energy and a stable tonal center. The novelty functions reveal a lack of sharp transitions, which suggests that the structure is intentionally restrained, likely following a learned pattern of what “relaxed” jazz should sound like. This consistency contributes to a calm and ambient vibe, but also points to a limited dynamic range.
+
+On the other hand, Hendrix’s Hey Joe presents a more organic and expressive musical landscape. The energy novelty curve features dramatic peaks and valleys, aligning with moments of instrumental intensity and vocal delivery. The keygram shows shifts that suggest real-time modulation or expressive deviations from a strict tonal center. In the chroma and timbre self-similarity matrices, we see pronounced diagonal structures, highlighting recurring themes and motifs—hallmarks of intentional musical phrasing and narrative.
+
+When placed in the broader context of the class corpus, clustering clearly places these tracks in separate sonic neighborhoods. The AI jazz track clusters near instrumental, lower-arousal tracks with moderate tempo and high smoothness, while Hey Joe stands apart—its position influenced by a more dynamic interplay of arousal, valence, and tempo. It resonates more closely with expressive human performances that vary across multiple musical dimensions.
+
+Overall, this analysis reveals how AI can effectively mimic stylistic elements—structure, tone, even genre-specific features—but still falls short of delivering the nuanced spontaneity that comes with human musicianship. Hendrix’s track reminds us that imperfections, tension, and surprise are not flaws in music—they’re often the most memorable parts.
+
+
+Cross-Track Feature Comparison {.storyboard}
+====================================================
+
+### Interactive Valence & Tempo Comparison
+```{r}
+interactive_plot <- compmus2025 |> 
+  mutate(highlight = case_when(
+    filename == "jasper-v-1" ~ "AI Jazz",
+    filename == "jasper-v-2" ~ "Hendrix",
+    TRUE ~ "Other"
+  )) |> 
+  ggplot(aes(x = tempo, y = valence, color = highlight, size = danceability)) +
+  geom_point(alpha = 0.6) +
+  scale_color_manual(values = c("AI Jazz" = "#38BDF8", "Hendrix" = "#FACC15", "Other" = "#94A3B8")) +
+  theme_minimal() +
+  labs(
+    title = "Valence vs Tempo (Highlighted Tracks)",
+    x = "Tempo (BPM)",
+    y = "Valence",
+    color = "Track Type",
+    size = "Danceability"
+  )
+
+ggplotly(interactive_plot)
 ```
 
 ***
+Interestingly, although Hendrix is known for expressive playing, its valence score is quite neutral, suggesting the limitations of automated valence extraction in expressive genres.
 
-#### tempogram Jimi Hendrix cyclic = TRUE
-
+### Combined Novelty Patterns
 ```{r}
-"features/jasper-v-2.json" |>
-  compmus_tempogram(window_size = 8, hop_size = 1, cyclic = TRUE) |>
-  ggplot(aes(x = time, y = bpm, fill = power)) +
-  geom_raster() +
-  scale_fill_viridis_c(guide = "none") +
-  labs(x = "Time (s)", y = "Tempo (BPM)") +
-  theme_classic()
+energy_ai <- compmus_energy_novelty("features/jasper-v-1.json") |> mutate(track = "AI Jazz")
+energy_hj <- compmus_energy_novelty("features/jasper-v-2.json") |> mutate(track = "Hendrix")
+
+bind_rows(energy_ai, energy_hj) |> 
+  ggplot(aes(x = t, y = novelty, color = track)) +
+  geom_line(size = 1) +
+  theme_minimal() +
+  labs(title = "Energy Novelty Comparison", x = "Time (s)", y = "Novelty")
 ```
 
-```{r}
 
+Track Similarity Summary {.storyboard}
+====================================================
+
+### Euclidean Distance Table (Top Matches)
+```{r}
+dist_matrix <- as.matrix(dist(cluster_juice))
+top_matches <- dist_matrix[rownames(dist_matrix) %in% c("jasper-v-1", "jasper-v-2"), ] |> 
+  as.data.frame() |> 
+  rownames_to_column("track") |> 
+  pivot_longer(-track, names_to = "compared_with", values_to = "distance") |>
+  filter(compared_with != track) |> 
+  group_by(track) |> 
+  slice_min(distance, n = 5) |> 
+  ungroup()
+
+top_matches |> gt()
 ```
+
+### Summary Table: Features of My Tracks
+```{r}
+compmus2025 |> 
+  filter(filename %in% c("jasper-v-1", "jasper-v-2")) |> 
+  select(filename, tempo, arousal, valence, danceability, instrumentalness) |> 
+  gt() |> 
+  tab_header(title = "Feature Summary: AI Jazz vs Hendrix")
+```
+
+Thank You {.storyboard}
+====================================================
+
+### Reflection
+This portfolio demonstrates a cross-sectional analysis of an AI-composed jazz track and a live recording by Jimi Hendrix. It leverages advanced R-based tools for analyzing musical data and contributes to a broader conversation about creativity, structure, and the role of AI in music.
+
+Using chroma-based self-similarity gave me new insight into how repetition manifests in both algorithmic and human compositions.
+
+### Possible Future Work
+- Add lyrical sentiment analysis for human tracks
+- Use supervised models to predict genre or composer
+
+---
+*Prepared for the Computational Musicology 2025 final portfolio presentation.*
 
